--- a/user/detail.html
+++ b/user/detail.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Chi tiết sản phẩm</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NVH Shop - Trang chủ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/user.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
     <!-- HEADER -->
     <header class="bg-dark text-white py-3">
         <div class="container d-flex justify-content-between align-items-center">
@@ -19,38 +20,23 @@
             <input type="text" class="form-control w-50" placeholder="Tìm kiếm sản phẩm...">
             <a href="cart.html" class="text-white fs-4 position-relative">
                 <i class="fas fa-shopping-cart"></i>
-                <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                <span id="cart-count"
+                    class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                     0
                 </span>
-            </a>              
+            </a>
         </div>
     </header>
 
-    <!-- DANH SÁCH SẢN PHẨM -->
-    <section class="container my-4">
-        <h4 class="mb-3">Sản phẩm nổi bật</h4>
-    
-        <!-- Sản phẩm render ở đây -->
-        <div class="row" id="product-list">
-            <!-- JS render sản phẩm tại đây -->
+    <div class="container py-5">
+        <a href="index.html" class="btn btn-secondary mb-3"> Quay lại</a>
+        <div id="product-detail" class="row">
+            <!-- Thông tin sản phẩm sẽ được render tại đây -->
         </div>
-    
-        <!-- PHÂN TRANG -->
-        <div class="d-flex justify-content-center gap-2 mt-4">
-            <button id="prev-btn" class="btn btn-outline-primary">Trang trước</button>
-            <button id="next-btn" class="btn btn-outline-primary">Trang sau</button>
-        </div>
-    </section>
-  
+    </div>
 
-    <!-- FOOTER -->
-    <footer class="bg-light text-center py-4 mt-5">
-        <p class="mb-0">© 2025 NVH SHOP. All rights reserved.</p>
-    </footer>
-
-    <!-- SCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./js/user.js"></script>
+    <script src="./js/detail.js"></script>
     <script src="./js/common.js"></script>
 
 </body>
